--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ img,img:hover,img:focus{
 
 }
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form,.header4{
-	background:traparent;
+	background:transparent;
 	
 	
 }
